Update dependecies and plugins